adicionado player no grid template. retirado o context na comunicação entre os components.

--- a/front-end/src/principal/components/Search/search.css
+++ b/front-end/src/principal/components/Search/search.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     overflow-x: hidden;
     overflow-y: scroll;
-    height: 100vh;
+    height: 100%;
     align-items: center;
 }
 
