--- a/front-end/src/principal/components/Inicio/inicio.css
+++ b/front-end/src/principal/components/Inicio/inicio.css
@@ -6,8 +6,9 @@
     align-items: center;
     overflow-x: hidden;
     overflow-y: scroll;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
+    align-items: center;
 }
 
 .section-wrapper{
