--- a/front-end/src/principal/routes/Artist/artist.css
+++ b/front-end/src/principal/routes/Artist/artist.css
@@ -79,7 +79,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 420px;
+    height: 300px;
     overflow-x: hidden;
     overflow-y: hidden;
 }
@@ -94,6 +94,20 @@
 
 .artist-track-row:hover{
     background-color: #282828;
+}
+
+.artist-track-row-album-photo{
+    width: 50px;
+    height: 50px;
+    
+    min-width: 50px;
+    min-height: 50px;
+}
+
+
+.artist-track-row-album-photo *{
+    width: 100%;
+    height: 100%;
 }
 
 .music-icon{
@@ -137,7 +151,24 @@
     grid-area: artist-info;
     height: 100%;
     width: 100%;
+    display: flex;
+     justify-content: center;
+    flex-direction: column;
 }
+
+.artist-info *{
+    margin-left: 2.5%;
+    color:white;
+}
+
+.artist-name{
+    font-size: 3.5rem;
+    font-weight: bold;
+}
+
+.artist-followers{
+    margin-top: 10px;
+} 
 
 .artist-albuns-wrapper{
     display: grid;
