--- a/front-end/src/principal/principal.css
+++ b/front-end/src/principal/principal.css
@@ -1,7 +1,8 @@
 #root{
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     margin: 0px;
+    min-height: 100%;
 }
 
 body{
@@ -9,11 +10,12 @@ body{
     height: 100%;
     overflow: hidden;
     background-color: #111111;
+    font-size: 14px;
 }
 
 .principal-wrapper{
     display: grid;
-    grid-template-columns: 232px 1fr;
+    grid-template-columns: min(232px, 30vw) 1fr;
     grid-template-rows: calc(100vh - 90px) 90px;
     grid-template-areas: "sidebar body" "player player";
 }
@@ -23,4 +25,34 @@ body{
     grid-area: body;
     grid-template-rows: 60px 1fr;
     grid-template-areas: "topbar" "main-view";
+}
+
+@media screen and (max-width: 1366px) {
+    body{
+        font-size: 14px;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    body{
+        font-size: 11px;
+    }
+
+    .principal-wrapper{
+        
+        grid-template-columns: min(190px, 30vw) 1fr;
+    }
+    
+}
+
+@media screen and (max-width: 360px) {
+    body{
+        font-size: 6px;
+    }
+
+    .principal-wrapper{
+        
+        grid-template-columns: 85px 1fr;
+    }
+    
 }
