--- a/front-end/src/principal/routes/Artist/artist.css
+++ b/front-end/src/principal/routes/Artist/artist.css
@@ -217,3 +217,68 @@
 .artist-album-name:hover{
     text-decoration: underline;
 }
+
+@media screen and (max-width: 360px) {
+    .artist-album{
+        height: 100px;
+        margin: 3px;
+    }
+
+    .artist-track-row{
+        height: 30px;
+    }
+
+    .artist-track-name{
+        font-size: .4rem;
+    }
+
+    .artist-track-artists{
+        font-size: .4rem;
+        color: #aaaaaa; 
+    }
+
+    .artist-track-row-album-photo{
+        width: 25px;
+        height: 25px;
+        
+        min-width: 25px;
+        min-height: 25px;
+    }
+
+    .artist-section-title{
+        color: white;
+        font-weight: bold;
+        font-size: 1rem;
+        margin: 10px 0;
+    }
+
+    .music-icon{
+        width: 10px;
+        height: 10px;
+        margin: 0px 5px;
+    }
+
+    .artist-albuns-wrapper{
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(85px, 1fr));
+    
+        overflow: hidden;
+        max-height: 210px;
+    }
+
+    .artist-name{
+        font-size: 2.5rem;
+        font-weight: bold;
+    }
+
+    .artist-view-switch{
+        height: 20px;
+        margin-left: 10px;
+        font-size: .5rem
+    }
+
+    .artist-section{
+        margin: 5px 0;
+    }
+
+}
