--- a/front-end/src/pages/principal/components/Player/player.css
+++ b/front-end/src/pages/principal/components/Player/player.css
@@ -113,4 +113,117 @@
 
 .player-sound{
     grid-area: player-sound;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+.player-volume{
+    width: 60%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.player-volume-icon {
+    width: 15%;
+}
+
+.player-volume-slider{
+    width: 70%;
+}
+
+.slider {
+    height: 10px;
+    -webkit-appearance: none;
+    margin: 10px 0;
+    background-color: transparent;
+  }
+
+  .slider:focus {
+    outline: none;
+  }
+
+  .slider::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 4px;
+    cursor: pointer;
+    box-shadow: 0px 0px 0px #000000;
+    background: #DDDDDD;
+    border-radius: 5px;
+    border: 0px solid #000000;
+  }
+
+  .slider::-webkit-slider-thumb {
+    box-shadow: 0px 0px 0px #000000;
+    border: 0px solid #000000;
+    height: 12px;
+    width: 12px;
+    border-radius: 12px;
+    background: #FFFFFF;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -5px;
+  }
+  
+  .slider:focus::-webkit-slider-runnable-track {
+    background: #bbbbbb;
+  }
+
+  .slider::-moz-range-track {
+    width: 100%;
+    height: 7px;
+    cursor: pointer;
+    box-shadow: 0px 0px 0px #000000;
+    background: #bbbbbb;
+    border-radius: 5px;
+    border: 0px solid #000000;
+  }
+
+  .slider::-moz-range-thumb {
+    box-shadow: 0px 0px 0px #000000;
+    border: 0px solid #000000;
+    height: 12px;
+    width: 12px;
+    border-radius: 12px;
+    background: #FFFFFF;
+    cursor: pointer;
+  }
+
+  .slider::-ms-track {
+    width: 100%;
+    height: 7px;
+    cursor: pointer;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+  }
+  
+  .slider::-ms-fill-lower {
+    background: #bbbbbb;
+    border: 0px solid #000000;
+    border-radius: 10px;
+    box-shadow: 0px 0px 0px #000000;
+  }
+  .slider::-ms-fill-upper {
+    background: #bbbbbb;
+    border: 0px solid #000000;
+    border-radius: 10px;
+    box-shadow: 0px 0px 0px #000000;
+  }
+  .slider::-ms-thumb {
+    margin-top: 1px;
+    box-shadow: 0px 0px 0px #000000;
+    border: 0px solid #000000;
+    height: 12px;
+    width: 12px;
+    border-radius: 12px;
+    background: #FFFFFF;
+    cursor: pointer;
+  }
+  .slider:focus::-ms-fill-lower {
+    background: #bbbbbb;
+  }
+  .slider:focus::-ms-fill-upper {
+    background: #bbbbbb;
+  }
