adicionado controle do tempo da música pela barra de progresso

--- a/front-end/src/pages/principal/components/Player/player.css
+++ b/front-end/src/pages/principal/components/Player/player.css
@@ -64,16 +64,8 @@
     align-items: center;
 }
 
-.player-timeline-actual{
-    height: 4px;
-    border-radius: 50px;
-    background-color: #bbbbbb;
-}
-
-.player-timeline-restant{
-    height: 4px;
-    border-radius: 50px;
-    background-color: #555555;
+.player-timeline-slider{
+  width: 100%;
 }
 
 .player-controls{
@@ -110,7 +102,6 @@
     margin: 5px;
 }
 
-
 .player-sound{
     grid-area: player-sound;
     display: flex;
@@ -134,24 +125,14 @@
 }
 
 .slider {
-    height: 10px;
+    height: 5px;
     -webkit-appearance: none;
     margin: 10px 0;
-    background-color: transparent;
+    border-radius: 5px;
   }
 
   .slider:focus {
     outline: none;
-  }
-
-  .slider::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 4px;
-    cursor: pointer;
-    box-shadow: 0px 0px 0px #000000;
-    background: #DDDDDD;
-    border-radius: 5px;
-    border: 0px solid #000000;
   }
 
   .slider::-webkit-slider-thumb {
@@ -163,21 +144,6 @@
     background: #FFFFFF;
     cursor: pointer;
     -webkit-appearance: none;
-    margin-top: -5px;
-  }
-  
-  .slider:focus::-webkit-slider-runnable-track {
-    background: #bbbbbb;
-  }
-
-  .slider::-moz-range-track {
-    width: 100%;
-    height: 7px;
-    cursor: pointer;
-    box-shadow: 0px 0px 0px #000000;
-    background: #bbbbbb;
-    border-radius: 5px;
-    border: 0px solid #000000;
   }
 
   .slider::-moz-range-thumb {
@@ -190,27 +156,6 @@
     cursor: pointer;
   }
 
-  .slider::-ms-track {
-    width: 100%;
-    height: 7px;
-    cursor: pointer;
-    background: transparent;
-    border-color: transparent;
-    color: transparent;
-  }
-  
-  .slider::-ms-fill-lower {
-    background: #bbbbbb;
-    border: 0px solid #000000;
-    border-radius: 10px;
-    box-shadow: 0px 0px 0px #000000;
-  }
-  .slider::-ms-fill-upper {
-    background: #bbbbbb;
-    border: 0px solid #000000;
-    border-radius: 10px;
-    box-shadow: 0px 0px 0px #000000;
-  }
   .slider::-ms-thumb {
     margin-top: 1px;
     box-shadow: 0px 0px 0px #000000;
@@ -220,10 +165,4 @@
     border-radius: 12px;
     background: #FFFFFF;
     cursor: pointer;
-  }
-  .slider:focus::-ms-fill-lower {
-    background: #bbbbbb;
-  }
-  .slider:focus::-ms-fill-upper {
-    background: #bbbbbb;
   }
